public/assets/main.css
/* ... */
.notificationMention {
    color: var(--txt1);
    text-decoration: none;
}

/* Toots */

.post-content p:last-child {
    margin-bottom: 0px;
}

.post-content p {
    margin-bottom: 15px;
}

/* idk */

.notificationTop .notificationMention {
    font-weight: 600;
}

.mCC-stat {
    width: 100%;
}

